+rhyme [[Rhymes:English/ætəɹəl|-ætəɹəl]] <quadrilateral#61920618>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -12,6 +12,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * {{enPR|kwäd'-rə-lăt′-ər-əl}}
 * {{audio|en|En-us-quadrilateral.ogg|Audio (US)}}
 * {{audio|en|En-ca-quadrilateral.oga|Audio (CA)}}
+* {{rhymes|en|ætəɹəl}}
 
 ===Noun===
 {{en-noun}}
