t+lv:[[patērēt]] t-balance t+uk:[[споживати]] t+uk:[[спожити]] ([[WT:EDIT|Assisted]]) <consume#61923274>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -68,6 +68,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Irish: {{t|ga|caith}}
 *: Old Irish: {{t|sga|caithid}}
 * Italian: {{t+|it|consumare}}
+* Latvian: {{t|lv|patērēt}}
 * Maori: {{t|mi|whakapeto}}, {{t|mi|none}}, {{t|mi|whakahemo}}
 * Norwegian: {{t|no|forbruke}}, {{t|no|bruke opp}}
 * Persian: {{t+|fa|مصرف کردن|sc=fa-Arab}}
@@ -77,6 +78,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|расходовать}}
 * Thai: {{t|th|อุปโภค}}, {{t+|th|ใช้}}
 * Turkish: {{t+|tr|kullanmak}}, {{t+|tr|harcamak}}
+* Ukrainian: {{t|uk|спожива́ти|impf}}, {{t|uk|спожи́ти|pf}}
 * Vietnamese: {{t+|vi|dùng}}, {{t+|vi|tiêu thụ}}
 {{trans-bottom}}
 
@@ -113,6 +115,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Thai: {{t+|th|บริโภค}}, {{t+|th|กิน}}
 * Tocharian B: {{t|txb|śu-}}
 * Turkish: {{t+|tr|yemek}}, {{t+|tr|tüketmek}}
+* Ukrainian: {{t|uk|спожива́ти|impf}}, {{t|uk|спожи́ти|pf}}
 * Vietnamese: {{t+|vi|ăn}}
 {{trans-bottom}}
 
