t+pl:[[spożywać]] t+pl:[[spożyć]] ([[WT:EDIT|Assisted]]) <consume#61923301>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -106,6 +106,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 * Norwegian: {{t+|no|fortære}}
 * Occitan: {{t|oc|consumar}}
 * Persian: {{t+|fa|مصرف کردن|sc=fa-Arab}}
+* Polish: {{t+|pl|spożywać|impf}}, {{t+|pl|spożyć|pf}}
 * Portuguese: {{t+|pt|consumir}}
 * Romanian: {{t+|ro|consuma}}
 * Russian: {{t+|ru|потреблять}}, {{t+|ru|поедать}}
