/* Etymology 1 */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <at#61937730>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1277,6 +1277,9 @@ Cognate with {{cog|yai|ашт}}.
 ===Etymology 1===
 From {{inh|yol|enm|that}}, from {{inh|yol|ang|þæt}}, from {{inh|yol|gem-pro|*þat}}.
 
+===Alternative forms===
+* {{alter|yol|et}}
+
 ====Conjunction====
 {{head|yol|conjunction}}
 
