--- a/en/b/befallen.6783.wikitext
+++ b/en/b/befallen.6783.wikitext
@@ -20,6 +20,7 @@ From {{affix|de|be-|fallen}}.
 * {{IPA|de|/bəˈfaln̩/|/bəˈfalən/}}
 * {{audio|de|De-befallen.ogg|Audio}}
 * {{hyphenation|de|be|fal|len}}
+* {{rhymes|de|aln̩}}
 
 ===Verb===
 {{de-verb|befallen<befällt#befiel,befallen>}}
