--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -444,7 +444,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 ==Khumi Chin==
 
 ===Etymology===
-From {{inh|cnk|sit-pro|*siŋ}}. Cognates include {{cog|lus|thing}}.
+From {{inh|cnk|tbq-kuk-pro}}, from {{inh|cnk|sit-pro|*siŋ}}. Cognates include {{cog|lus|thing}}.
 
 ===Pronunciation===
 * {{IPA|cnk|/tʰĩ˥/}}
