--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -7,6 +7,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|en|/ˈɡæm.bəl/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-gamble.wav|Audio (Southern England)}}
 * {{rhymes|en|æmbəl}}
 * {{homophones|en|gambol}}
 
@@ -14,10 +15,10 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 {{en-noun}}
 
 # A [[bet]] or [[wager]].
-#: ''I had a '''gamble''' on the horses last weekend.''
+#: {{ux|en|I had a '''gamble''' on the horses last weekend.}}
 # A significant [[risk]], undertaken with a potential gain.
 # A risky [[venture]].
-#: ''The sailors had taken many '''gambles''' with the sea and always won.''
+#: {{ux|en|The sailors had taken many '''gambles''' with the sea and always won.}}
 
 ====Translations====
 {{trans-top|a risk undertaken with a potential gain}}
@@ -71,8 +72,9 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 
 # To take a risk, with the potential of a positive outcome.
 # To play risky [[game]]s, especially [[casino]] games, for monetary gain.
+#: {{ux|en|Mark won half a million dollars '''gambling''' on horses.}}
 # {{lb|en|transitive}} To [[risk]] (something) for potential gain.
-#: ''He '''gambled''' his reputation on the outcome.''
+#: {{ux|en|He '''gambled''' his reputation on the outcome.}}
 # To interact with equipment at a [[casino]]
 
 ====Translations====
