--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|en|/ˈbled/}}
+* {{IPA|en|/ˈblɛd/}}
 * {{audio|en|LL-Q1860 (eng)-Vealhurl-bled.wav |Audio (UK)}}
 * {{rhymes|en|ɛd}}
 
