t+xmf:[[ლაზური]] t+xmf:[[ლაზური ნინა]] t+lzz:[[ლაზური]] ([[WT:EDIT|Assisted]]) <Laz#62001281>

--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -19,8 +19,8 @@
 {{trans-mid}}
 * German: {{t|de|Lasische Sprache|f}}
 *: Northern Kurdish: {{t-needed|kmr}}
-* Laz: {{t|lzz|ლაზური ნენა}}
-* Mingrelian: {{t-needed|xmf}}
+* Laz: {{t|lzz|ლაზური ნენა}}, {{t|lzz|ლაზური}}
+* Mingrelian: {{t|xmf|ლაზური}}, {{t|xmf|ლაზური ნინა}}
 * Russian: {{t+|ru|ла́зский|m}}
 * Svan: {{t-needed|sva}}
 * Swedish: {{t+|sv|laziska|c}}
