--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -92,7 +92,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 =====Translations=====
 {{trans-top|police officer}}
 * Arabic: {{t+|ar|شُرْطِيّ}}
-* Belarusian: {{t|be|мент|m}}
+* Belarusian: {{t|be|мент|m}}, {{t|be|більдзюга|m|tr=bildzjuha}} {{qualifier|offensive}}
 * Bulgarian: {{t+|bg|полицай|m}}, {{t+|bg|ченге|n}}
 * Catalan: {{t+|ca|bòfia|f}}
 * Cherokee: {{t|chr|ᏗᏓᏂᏱᏍᎩ}}
