--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -3,7 +3,7 @@
 [[File:Divide20by4.svg|thumb|<math>20 \div 4=5</math>]]
 
 ===Etymology===
-From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|divisio|divisio, divisionem}}, noun of process form from perfect passive participle {{m|la|divisus||divided}}, from {{m|la|dīvidō||divide}}
+From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|divisio|dīvīsiō, dīvīsiōnem}}, noun of process form from perfect passive participle {{m|la|dīvīsus||divided}}, from {{m|la|dīvidō||divide}}. {{doublet|en|divisio}}.
 
 ===Pronunciation===
 * {{IPA|en|/dɪˈvɪʒən/}}
