--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -37,6 +37,9 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 # {{lb|en|UK|Eton College}} A [[lesson]]; a [[class]].
 #: {{syn|en|div|q1=informal}}
 
+====Synonyms====
+* {{sense|taxonomy}} {{l|en|divisio}}, {{l|en|phylum}}
+
 ====Derived terms====
 {{der3
 |en|division-viol
