--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{der|en|ang|Ēostre|}}, {{m|ang|Ēastre||a goddess of spring and fertility}} and {{m|ang|ēastre||Easter}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime; a goddess of spring and fertility}}. {{doublet|en|Easter}}.
+From {{der|en|ang|Ēostre|}}, {{m|ang|Ēastre||a word referring to "the rising dawn" to indicate the season of Spring}} and {{m|ang|ēastre||Easter}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime}}. {{doublet|en|Easter}}.
 
 ===Proper noun===
 {{en-proper noun}}
