/* Proper noun */ <Eostre#62043170>

--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -8,7 +8,7 @@ From {{der|en|ang|Ēostre|}}, {{m|ang|Ēastre||a word referring to "the rising d
 {{wikipedia}}
 
 # {{lb|en|paganism}} A modern invented [[pagan]] festival celebrated either in March or April to welcome the Spring, also called [[Ostara]] or [[Easter]].
-# A [[putative]] [[Anglo-Saxon]] goddess. (No primary sources found to confirm this)
+# A [[putative]] [[Anglo-Saxon]] seasonal reference.
 
 ===References===
 * Pete Jennings (1998), ''The Norse Tradition: A Beginner's Guide'', Headway, {{ISBN|0-340-72082-4}}, p. 40.
