--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -1,15 +1,14 @@
-{{also|pow|pow.|pōw}}
+{{also|pow|pow.|pōw|PoW}}
 ==English==
 
 ===Noun===
 {{en-noun}}
 
 # {{lb|en|military}} {{initialism of|en|prisoner of war}}
-#: ''After his capture he was taken to a camp for '''POWs'''.''
+#: {{syn|en|PW|q1=Canada}}
+#: {{ux|en|After his capture he was taken to a camp for '''POWs'''.}}
 # {{lb|en|religion}} {{initialism of|en|place of worship}}
-
-====Synonyms====
-* {{l|en|PW}} {{qualifier|Canada|military}}
+# {{lb|en|cryptocurrencies}} {{alternative case form of|en|PoW|t=proof of work}}
 
 ====Derived terms====
 * [[POW camp]]
