--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -20,25 +20,33 @@
 * Belarusian: {{t|be|Расі́йская Саве́цкая Федэраты́ўная Сацыялісты́чная Рэспу́бліка|f}}
 * Bengali: {{t|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
 * Bulgarian: {{t|bg|Руска съветска федеративна социалистическа република|f}}
+* Chechen: {{t|ce|Российн Советан Федеративан Социалистически Республика}}
 * Chinese:
 *: Mandarin: {{t|cmn|俄羅斯蘇維埃聯邦社會主義共和國|tr=Éluósī Sūwéi'āi Liánbāng Shèhuìzhǔyì Gònghéguó}}, {{t|cmn|俄罗斯苏维埃联邦社会主义共和国|tr=Éluósī Sūwéi'āi Liánbāng Shèhuìzhǔyì Gònghéguó}}
+* Chuvash: {{t|cv|Раҫҫей Федерациллӗ Социализмлӑ Совет Республики}}
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Danish: {{t|da|Russiske Socialistiske Føderative Sovjetrepublik|c}}
 * Dutch: {{t+|nl|Russische Socialistische Federatieve Sovjetrepubliek|c}}
 * Finnish: {{t|fi|Venäjän Sosialistinen Federatiivinen Neuvostotasavalta}}
 * French: {{t|fr|République socialiste fédérative soviétique de Russie|f}}
 * Galician: {{t|gl|República Socialista Federativa Soviética Rusa|f}}
-{{trans-mid}}
 * Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
+{{trans-mid}}
 * German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
 * Ingush: {{t|inh|Россе Советий Федеративни Социалистически Республика}}
 * Karachay-Balkar: {{t|krc|Россия Совет Федератив Социалист Республика}}
+* Kazakh: {{t|kk|Ресей Кеңестік Федерациялық Социалистік Республикасы}}
 * Macedonian: {{t|mk|Руска Советска Федерати́вна Социјалистичка Република|f}}
 * Ossetian: {{t|os|Уæрæсейы Советон Федеративон Социалистон Республикӕ}}
 * Portuguese: {{t+|pt|República Socialista Federativa Soviética da Rússia|f}}
 * Romanian: {{t|ro|Republica Sovietică Federativă Socialistă Rusă|f}}
 * Russian: {{t+|ru|Росси́йская Сове́тская Федерати́вная Социалисти́ческая Респу́блика|f}}
+* Rusyn: {{t|rue|Російска Совѣтска Федератівна Социалистична Републік|f}}
+* Serbo-Croatian: {{t|sh|Ruska Sovjetska Federativna Socijalistička Republika|f}}
 * Spanish: {{t+|es|República Socialista Federativa Soviética de Rusia|f}}
+* Tatar: {{t|tt|Россия Совет Федератив Социалистик Җөмһүрияте}}
+* Ukrainian: {{t|uk|Російська Радянська Федеративна Соціалістична Республіка|f}}
+* Yakut: {{t|sah|Россия сэбиэскэй федеративнай сойуустаах республикалара}}
 {{trans-bottom}}
 
 [[Category:en:Historical polities]]
