--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -16,10 +16,13 @@
 ====Translations====
 {{trans-top|official name for modern day Russia before the collapse of the Soviet Union}}
 * Avar: {{t|av|Россиялъул Советияб Федеративияб Социализмаялъул Республика}}
+* Azerbaijani: {{t|az|Rusiya Sovet Federativ Sosialist Respublikası}}
 * Bashkir: {{t|ba|Рәсәй Совет Федератив Социалистик Республикаһы}}
+* Basque: {{t|eu|Errusiako Sobietar Errepublika Sozialista Federatiboa}}
 * Belarusian: {{t|be|Расі́йская Саве́цкая Федэраты́ўная Сацыялісты́чная Рэспу́бліка|f}}
 * Bengali: {{t|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
 * Bulgarian: {{t|bg|Руска съветска федеративна социалистическа република|f}}
+* Catalan: {{t|ca|República Socialista Federada Soviètica de Rússia|f}}
 * Chechen: {{t|ce|Российн Советан Федеративан Социалистически Республика}}
 * Chinese:
 *: Mandarin: {{t|cmn|俄羅斯蘇維埃聯邦社會主義共和國|tr=Éluósī Sūwéi'āi Liánbāng Shèhuìzhǔyì Gònghéguó}}, {{t|cmn|俄罗斯苏维埃联邦社会主义共和国|tr=Éluósī Sūwéi'āi Liánbāng Shèhuìzhǔyì Gònghéguó}}
@@ -27,15 +30,20 @@
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Danish: {{t|da|Russiske Socialistiske Føderative Sovjetrepublik|c}}
 * Dutch: {{t+|nl|Russische Socialistische Federatieve Sovjetrepubliek|c}}
+* Estonian: {{t|et|Venemaa Nõukogude Föderatiivne Sotsialistlik Vabariik}}
 * Finnish: {{t|fi|Venäjän Sosialistinen Federatiivinen Neuvostotasavalta}}
 * French: {{t|fr|République socialiste fédérative soviétique de Russie|f}}
 * Galician: {{t|gl|República Socialista Federativa Soviética Rusa|f}}
 * Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
 {{trans-mid}}
 * German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
+* Greek: {{t|el|Ρωσική Σοβιετική Ομοσπονδιακή Σοσιαλιστική Δημοκρατία|f}}
 * Ingush: {{t|inh|Россе Советий Федеративни Социалистически Республика}}
+* Italian: {{t|it|Repubblica Socialista Federativa Sovietica Russa|f}}
 * Karachay-Balkar: {{t|krc|Россия Совет Федератив Социалист Республика}}
 * Kazakh: {{t|kk|Ресей Кеңестік Федерациялық Социалистік Республикасы}}
+* Latvian: {{t|lv|Krievijas Padomju Federatīvā Sociālistiskā Republika|f}}
+* Lithuanian: {{t|lt|Rusijos Tarybų Federacinė Socialistinė Respublika|f}}
 * Macedonian: {{t|mk|Руска Советска Федерати́вна Социјалистичка Република|f}}
 * Ossetian: {{t|os|Уæрæсейы Советон Федеративон Социалистон Республикӕ}}
 * Portuguese: {{t+|pt|República Socialista Federativa Soviética da Rússia|f}}
