t+bua:[[Зүблэлтэ Социалис Бүгэдэ Найрамдаха Холбоото Орос Улас]] t+ky:[[Орусия Советтик Социалисттик Федеративдик Республикасы]] t+mn:[[Зөвлөлт Социалист Бүгд Найрамдах Холбоот Орос Улс]] t+id:[[Republik Sosialis Federasi Soviet Rusia]] t+ms:[[Republik Sosialis Persekutuan Soviet Rusia]] t+uz:[[Rossiya Sovet Federativ Sotsialistik Respublikasi]] t+tl:[[Sosyalistang Pederatibong Republikang Sobyet ng Rusya]] t+vi:[[Cộng hòa Xã hội chủ nghĩa Xô viết Liên bang Nga]] t+tk:[[Russiýa Sowet Federati... <Russian Soviet Federative Socialist Republic#62043598>

--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -24,6 +24,7 @@
 * Belarusian: {{t|be|Расі́йская Саве́цкая Федэраты́ўная Сацыялісты́чная Рэспу́бліка|f}}
 * Bengali: {{t|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
 * Bulgarian: {{t|bg|Руска съветска федеративна социалистическа република|f}}
+* Buryat: {{t|bua|Зүблэлтэ Социалис Бүгэдэ Найрамдаха Холбоото Орос Улас}}
 * Catalan: {{t|ca|República Socialista Federada Soviètica de Rússia|f}}
 * Chechen: {{t|ce|Российн Советан Федеративан Социалистически Республика}}
 * Chinese:
@@ -40,18 +41,22 @@
 * Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
 * German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
 * Greek: {{t|el|Ρωσική Σοβιετική Ομοσπονδιακή Σοσιαλιστική Δημοκρατία|f}}
-{{trans-mid}}
 * Hungarian: {{t|hu|Oroszországi Szovjet Szövetségi Szocialista Köztársaság}}
+* Indonesian: {{t|id|Republik Sosialis Federasi Soviet Rusia}}
 * Ingush: {{t|inh|Россе Советий Федеративни Социалистически Республика}}
+{{trans-mid}}
 * Italian: {{t|it|Repubblica Socialista Federativa Sovietica Russa|f}}
 * Japanese: {{t|ja|ロシア・ソビエト連邦社会主義共和国|tr=Roshia Sobieto Renpо̄ Shakaishugi Kyо̄wakoku}}
 * Karachay-Balkar: {{t|krc|Россия Совет Федератив Социалист Республика}}
 * Kazakh: {{t|kk|Ресей Кеңестік Федерациялық Социалистік Республикасы}}
 * Korean: {{t|ko|^러시아 ^소비에트 ^연방 ^사회주의 ^공화국}}
+* Kyrgyz: {{t|ky|Орусия Советтик Социалисттик Федеративдик Республикасы}}
 * Latvian: {{t|lv|Krievijas Padomju Federatīvā Sociālistiskā Republika|f}}
 * Lithuanian: {{t|lt|Rusijos Tarybų Federacinė Socialistinė Respublika|f}}
 * Macedonian: {{t|mk|Руска Советска Федерати́вна Социјалистичка Република|f}}
+* Malay: {{t|ms|Republik Sosialis Persekutuan Soviet Rusia}}
 * Mingrelian: {{t|xmf|რუსეთიშ სხუნუეფიშ ფედერაციული სოციალისტური რესპუბლიკა}}
+* Mongolian: {{t|mn|Зөвлөлт Социалист Бүгд Найрамдах Холбоот Орос Улс}}
 * Norwegian: {{t|no|Russiske sovjetiske føderative sosialistrepublikk}}
 * Ossetian: {{t|os|Уæрæсейы Советон Федеративон Социалистон Республикӕ}}
 * Polish: {{t|pl|Rosyjska Federacyjna Socjalistyczna Republika Radziecka}}
@@ -63,9 +68,13 @@
 * Slovak: {{t|sk|Ruská sovietska federatívna socialistická republika|f}}
 * Spanish: {{t+|es|República Socialista Federativa Soviética de Rusia|f}}
 * Swedish: {{t|sv|Ryska sovjetiska federativa socialistrepubliken|c}}
+* Tagalog: {{t|tl|Sosyalistang Pederatibong Republikang Sobyet ng Rusya}}
 * Tatar: {{t|tt|Россия Совет Федератив Социалистик Җөмһүрияте}}
 * Turkish: {{t|tr|Rusya Sovyet Federatif Sosyalist Cumhuriyeti}}
+* Turkmen: {{t|tk|Russiýa Sowet Federatiw Sotsialistik Respublikasy}}
 * Ukrainian: {{t|uk|Російська Радянська Федеративна Соціалістична Республіка|f}}
+* Uzbek: {{t|uz|Rossiya Sovet Federativ Sotsialistik Respublikasi}}
+* Vietnamese: {{t|vi|Cộng hòa Xã hội chủ nghĩa Xô viết Liên bang Nga}}
 * Yakut: {{t|sah|Россия сэбиэскэй федеративнай сойуустаах республикалара}}
 {{trans-bottom}}
 
