--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -15,8 +15,11 @@
 
 ====Translations====
 {{trans-top|official name for modern day Russia before the collapse of the Soviet Union}}
+* Afrikaans: {{t|af|Russiese Sosialistiese Federale Sowjetrepubliek}}
 * Albanian: {{t|sq|Republika Socialiste Federale Sovjetike e Rusisë|f}}
+* Arabic: {{t|ar|جمهورية روسيا الاتحادية الاشتراكية السوفيتية}}
 * Armenian: {{t|hy|Ռուսաստանի Խորհրդային Ֆեդերատիվ Սոցիալիստական Հանրապետություն|f}}
+* Asturian: {{t|ast|República Socialista Federativa Soviética de Rusia}}
 * Avar: {{t|av|Россиялъул Советияб Федеративияб Социализмаялъул Республика}}
 * Azerbaijani: {{t|az|Rusiya Sovet Federativ Sosialist Respublikası}}
 * Bashkir: {{t|ba|Рәсәй Совет Федератив Социалистик Республикаһы}}
