--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -17,7 +17,7 @@
 {{trans-top|official name for modern day Russia before the collapse of the Soviet Union}}
 * Afrikaans: {{t|af|Russiese Sosialistiese Federale Sowjetrepubliek}}
 * Albanian: {{t|sq|Republika Socialiste Federale Sovjetike e Rusisë|f}}
-* Arabic: {{t|ar|جُمْهُورِيَّة رُوسِيَا الِاتِّحَادِيَّة الِاشْتِرَاكِيَّة السُّوفْيِتِيَّة|f}}
+* Arabic: {{t|ar|جُمْهُورِيَّة رُوسِيَا اَلِاتِّحَادِيَّة اَلِاشْتِرَاكِيَّة اَلسُّوفْيِتِيَّة|f}}
 * Armenian: {{t|hy|Ռուսաստանի Խորհրդային Ֆեդերատիվ Սոցիալիստական Հանրապետություն|f}}
 * Asturian: {{t|ast|República Socialista Federativa Soviética de Rusia|f}}
 * Avar: {{t|av|Россиялъул Советияб Федеративияб Социализмаялъул Республика}}
