t+eo:[[Rusia Soveta Federacia Socialisma Respubliko]] t+fa:[[جمهوری فدراتیو سوسیالیستی روسیه شوروی]] t+he:[[הרפובליקה הסובייטית הפדרטיבית הסוציאליסטית הרוסית]] t+hi:[[रूसी सोवियत संघात्मक समाजवादी गणराज्य]] t+km:[[សាធារណរដ្ឋសង្គមនិយមសហព័ន្ធសូវៀតរុស្ស៊ី]] t+mr:[[रशियाचे सोव्हियेत साम्यवादी संघीय प्रजासत्ताक]] t+si:[[රුසියානු සෝවියට් සන්ධීය සමාජවාදී සමූහාණ්ඩුව]] t+sw:[[Shirikisho la Jamhuri ya Kisovyiet ya Kijamii ya Kirusi]] t+th:[[สหพันธ์สาธารณรัฐสังคมนิยมโซเวียตรัสเซีย]] t+ur:[[روسی سوویت وف... <Russian Soviet Federative Socialist Republic#62043669>

--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -37,6 +37,7 @@
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Danish: {{t|da|Russiske Socialistiske Føderative Sovjetrepublik|c}}
 * Dutch: {{t+|nl|Russische Socialistische Federatieve Sovjetrepubliek|c}}
+* Esperanto: {{t|eo|Rusia Soveta Federacia Socialisma Respubliko}}
 * Estonian: {{t|et|Venemaa Nõukogude Föderatiivne Sotsialistlik Vabariik}}
 * Finnish: {{t|fi|Venäjän Sosialistinen Federatiivinen Neuvostotasavalta}}
 * French: {{t|fr|République socialiste fédérative soviétique de Russie|f}}
@@ -44,41 +45,51 @@
 * Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
 * German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
 * Greek: {{t|el|Ρωσική Σοβιετική Ομοσπονδιακή Σοσιαλιστική Δημοκρατία|f}}
+* Hebrew: {{t|he|הרפובליקה הסובייטית הפדרטיבית הסוציאליסטית הרוסית}}
+* Hindi: {{t|hi|रूसी सोवियत संघात्मक समाजवादी गणराज्य}}
 * Hungarian: {{t|hu|Oroszországi Szovjet Szövetségi Szocialista Köztársaság}}
 * Indonesian: {{t|id|Republik Sosialis Federasi Soviet Rusia}}
 * Ingush: {{t|inh|Россе Советий Федеративни Социалистически Республика}}
-{{trans-mid}}
 * Italian: {{t|it|Repubblica Socialista Federativa Sovietica Russa|f}}
 * Japanese: {{t|ja|ロシア・ソビエト連邦社会主義共和国|tr=Roshia Sobieto Renpо̄ Shakaishugi Kyо̄wakoku}}
+{{trans-mid}}
 * Karachay-Balkar: {{t|krc|Россия Совет Федератив Социалист Республика}}
 * Kazakh: {{t|kk|Ресей Кеңестік Федерациялық Социалистік Республикасы}}
+* Khmer: {{t|km|សាធារណរដ្ឋសង្គមនិយមសហព័ន្ធសូវៀតរុស្ស៊ី}}
 * Korean: {{t|ko|^러시아 ^소비에트 ^연방 ^사회주의 ^공화국}}
 * Kyrgyz: {{t|ky|Орусия Советтик Социалисттик Федеративдик Республикасы}}
 * Latvian: {{t|lv|Krievijas Padomju Federatīvā Sociālistiskā Republika|f}}
 * Lithuanian: {{t|lt|Rusijos Tarybų Federacinė Socialistinė Respublika|f}}
 * Macedonian: {{t|mk|Руска Советска Федерати́вна Социјалистичка Република|f}}
 * Malay: {{t|ms|Republik Sosialis Persekutuan Soviet Rusia}}
+* Marathi: {{t|mr|रशियाचे सोव्हियेत साम्यवादी संघीय प्रजासत्ताक}}
 * Mingrelian: {{t|xmf|რუსეთიშ სხუნუეფიშ ფედერაციული სოციალისტური რესპუბლიკა}}
 * Mongolian: {{t|mn|Зөвлөлт Социалист Бүгд Найрамдах Холбоот Орос Улс}}
 * Norwegian: {{t|no|Russiske sovjetiske føderative sosialistrepublikk}}
 * Ossetian: {{t|os|Уæрæсейы Советон Федеративон Социалистон Республикӕ}}
+* Persian: {{t|fa|جمهوری فدراتیو سوسیالیستی روسیه شوروی}}
 * Polish: {{t|pl|Rosyjska Federacyjna Socjalistyczna Republika Radziecka}}
 * Portuguese: {{t+|pt|República Socialista Federativa Soviética da Rússia|f}}
 * Romanian: {{t|ro|Republica Sovietică Federativă Socialistă Rusă|f}}
 * Russian: {{t+|ru|Росси́йская Сове́тская Федерати́вная Социалисти́ческая Респу́блика|f}}
 * Rusyn: {{t|rue|Російска Совѣтска Федератівна Социалистична Републік|f}}
 * Serbo-Croatian: {{t|sh|Ruska Sovjetska Federativna Socijalistička Republika|f}}
+* Sinhalese: {{t|si|රුසියානු සෝවියට් සන්ධීය සමාජවාදී සමූහාණ්ඩුව}}
 * Slovak: {{t|sk|Ruská sovietska federatívna socialistická republika|f}}
 * Spanish: {{t+|es|República Socialista Federativa Soviética de Rusia|f}}
+* Swahili: {{t|sw|Shirikisho la Jamhuri ya Kisovyiet ya Kijamii ya Kirusi}}
 * Swedish: {{t|sv|Ryska sovjetiska federativa socialistrepubliken|c}}
 * Tagalog: {{t|tl|Sosyalistang Pederatibong Republikang Sobyet ng Rusya}}
 * Tatar: {{t|tt|Россия Совет Федератив Социалистик Җөмһүрияте}}
+* Thai: {{t|th|สหพันธ์สาธารณรัฐสังคมนิยมโซเวียตรัสเซีย}}
 * Turkish: {{t|tr|Rusya Sovyet Federatif Sosyalist Cumhuriyeti}}
 * Turkmen: {{t|tk|Russiýa Sowet Federatiw Sotsialistik Respublikasy}}
 * Ukrainian: {{t|uk|Російська Радянська Федеративна Соціалістична Республіка|f}}
+* Urdu: {{t|ur|روسی سوویت وفاقی اشتراکی جمہوریہ}}
 * Uzbek: {{t|uz|Rossiya Sovet Federativ Sotsialistik Respublikasi}}
 * Vietnamese: {{t|vi|Cộng hòa Xã hội chủ nghĩa Xô viết Liên bang Nga}}
 * Yakut: {{t|sah|Россия сэбиэскэй федеративнай сойуустаах республикалара}}
+* Yoruba: {{t|yo|Orílẹ̀-èdè Olómìnira Àpapọ̀ Sófìẹ̀tì Sósíálístì Rọ́síà}}
 {{trans-bottom}}
 
 [[Category:en:Historical polities]]
