--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -142,7 +142,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Afrikaans: {{t+|af|ding}}
 * Albanian: {{t+|sq|send|m}}
 * Amharic: {{t|am|ነገር|sc=Ethi}}
-* Arabic: {{t+|ar|شَيْء|m}}, {{t+|ar|أَمْر|m}}
+* Arabic: {{t+|ar|شَيْء|m}}
 *: Egyptian Arabic: {{t|arz|حاجة|f|tr=ḥāga}}
 *: Hijazi Arabic: {{t|acw|شي|m|tr=šay}}, {{t|acw|حاجة|f|tr=ḥāja}}
 *: Moroccan Arabic: {{t|ary|حاجة‎|f|tr=ḥāja}}, {{t|ary|شي|m|tr=šī}}, {{t|ary|شي|m|tr=šayy}}, {{t|ary|ستون|m|tr=stūn}} {{qualifier|slang}}
