t+ia:[[inclinar se]] ([[WT:EDIT|Assisted]]) <bend#62111971>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -184,6 +184,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 {{trans-top|to bow in prayer, or in token of submission}}
 * Catalan: {{t+|ca|inclinar-se}}
 * Finnish: {{t+|fi|kumartua}}
+* Interlingua: {{t|ia|inclinar se}}
 * Middle English: {{t|enm|croken}}
 {{trans-mid}}
 * Sanskrit: {{t+|sa|नमति}}
