--- a/en/k/kerel.4473.wikitext
+++ b/en/k/kerel.4473.wikitext
@@ -37,7 +37,7 @@ From {{inh|nl|dum|kerle}}. {{etystub|nl}}
 
 ===Anagrams===
 * {{l|nl|rekel}}
-
+[[Category:Dutch terms of address]]
 ----
 
 ==Romani==
