t+af:[[haas]] ([[WT:EDIT|Assisted]]) <rabbit#62135316>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -67,7 +67,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 =====Translations=====
 {{trans-top|mammal}}
 * Adyghe: {{t|ady|тхьэкӏумэкӏэхьы}}
-* Afrikaans: {{t+|af|konyn}}
+* Afrikaans: {{t+|af|konyn}}, {{t+|af|haas|s}}
 * Aguaruna: {{t|agr|wapuhuš}}
 * Ainu: {{t|ain|イセポ|tr=isepo}}
 * Alabama: {{t|akz|chokfi}}
