--- a/en/s/Smalltalk.775101.wikitext
+++ b/en/s/Smalltalk.775101.wikitext
@@ -28,6 +28,9 @@ Borrowed from {{bor|de|en|small talk}}.
 
 # [[small talk]]
 
+====Declension====
+{{de-decl-noun-m|s|}}
+
 ====Usage notes====
 * Generally masculine; the neuter is very rare.
 
