--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -20,7 +20,7 @@ Akin to {{cog|sco|thoch||though}}, {{cog|stq|dach||though}}, {{cog|fy|dôch}}, {
 {{en-adv|-}}
 
 # {{lb|en|conjunctive}} [[despite|Despite]] that; [[however]].
-#: {{ux|en|I will do it, '''though'''.}}
+#: {{ux|en|I'm not paid to do all this paperwork for you. I will do it this once, '''though'''.}}
 #* {{quote-journal|en|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/science-and-technology/http://www.economist.com/news/science-and-technology/21581980-latest-research-suggests-humans-are-not-warriors-their-genes-after-all-old Old soldiers?]
 |passage=Whether modern, industrial man is less or more warlike than his hunter-gatherer ancestors is impossible to determine.{{...}}One thing that is true, '''though''', is that murder rates have fallen over the centuries, as policing has spread and the routine carrying of weapons has diminished. Modern society may not have done anything about war. But peace is a lot more peaceful.}}
