--- a/en/a/alcoholometric.745842.wikitext
+++ b/en/a/alcoholometric.745842.wikitext
@@ -4,7 +4,7 @@
 {{af|en|alcohol|-o-|-metric}}
 
 ===Adjective===
-{{en-adj}}
+{{en-adj|-}}
 
 # Of or pertaining to the [[measurement]] of the [[alcohol]] content of [[beer]]s, [[wine]]s and [[spirit]]s
 
