--- a/en/c/corve.720109.wikitext
+++ b/en/c/corve.720109.wikitext
@@ -22,6 +22,15 @@
 
 ----
 
+==Middle English==
+
+===Verb===
+{{head|enm|verb form}}
+
+# {{inflection of|enm|sterven||2|s|past|ind|;|s|past|sub|;|pl|past|ind//sub}}
+
+----
+
 ==Spanish==
 
 ===Verb===
