--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -13,7 +13,7 @@
 * Afrikaans: {{t+|af|boesemvriend}}, {{t|af|boesemvriendin}}
 * Arabic: {{t-needed|ar}}
 * Chinese:
-*: Mandarin: {{t+|cmn|知己|tr=zhījǐ|sc=Hani}}, {{t+|cmn|知音|tr=zhīyīn|sc=Hani}}
+*: Mandarin: {{t+|cmn|知己|tr=zhījǐ|sc=Hani}}, {{t+|cmn|知音|tr=zhīyīn|sc=Hani}}, {{t+|cmn|摯友|tr=zhìyǒu}}
 * Dutch: {{t+|nl|getrouwe|m|f}}, {{t+|nl|boezemvriend|m}}, {{t|nl|boezemvriendin|f}}
 * Estonian: {{t|et|südamesõber}}
 * Finnish: {{t+|fi|sydänystävä}}
