--- a/en/n/nonary.802775.wikitext
+++ b/en/n/nonary.802775.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{number box|en|9}}
 
 ===Etymology===
 From the {{etyl|la|en}} {{m|la|nōnārius}}, from {{m|la|nōnus||ninth}} + {{m|la|-ārius}} (whence the {{etyl|en|-}} suffix {{m|en|-ary}}).
