--- a/en/c/coldsleep.855435.wikitext
+++ b/en/c/coldsleep.855435.wikitext
@@ -2,14 +2,23 @@
 ==English==
 
 ===Alternative forms===
-* [[cold sleep]]
+* {{alter|en|cold sleep}}
 
 ===Etymology===
 {{compound|en|cold|sleep}}
 
 ===Noun===
 {{en-noun|-}}
+
 # a deep [[sleep]] during which the body is stored at very [[cold]] temperature, to preserve it; [[cryogenic]] sleep.
 
 ====See also====
-* [[hibernation]]
+{{col3|en|
+|hibernation
+|aestivation
+|torpor
+|coma
+|[[vegetative]] state
+|catatonic
+|[[cryogenic]] state
+}}
