--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -19,11 +19,12 @@
 {{en-noun|~}}
 
 # {{lb|en|uncountable}} {{initialism of|en|frequency modulation}}
-# {{lb|en|countable}} {{abbreviation of|en|field marshal}}
-# {{lb|en|countable}} {{abbreviation of|en|finance minister}}
-# {{lb|en|countable}} {{abbreviation of|en|foreign minister}}
-# {{lb|en|countable}} {{abbreviation of|en|field manual}}
-# {{lb|en|countable}} {{abbreviation of|en|{{w|FIDE Master}}}}
+# {{lb|en|countable|military}} {{init of|en|field marshal}}
+# {{lb|en|countable}} {{init of|en|finance minister}}
+# {{lb|en|countable}} {{init of|en|foreign minister}}
+# {{lb|en|countable}} {{init of|en|field manual}}
+# {{lb|en|countable|aviation}} {{init of|en|fan marker}}
+# {{lb|en|countable|chess}} {{init of|en|{{w|FIDE Master}}}}
 
 ===Anagrams===
 * {{anagrams|en|a=fm|M-F|MF|mf}}
