--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -119,7 +119,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Russian: {{t+|ru|коп|m}} {{qualifier|American}}, {{t+|ru|мент|m}} {{qualifier|offensive}}, {{t+|ru|ляга́вый|m}}, {{t+|ru|лега́вый|m}} {{qualifier|offensive}}, {{t+|ru|му́сор|m}} {{qualifier|more offensive}}, {{t+|ru|фарао́н|m}} {{qualifier|slang, dated}}, {{t+|ru|полица́й|m}} {{qualifier|slang}}
 * Sicilian: {{t|scn|zaffu|m}}
 * Slovak: {{t+|sk|poliš|m}}, {{t|sk|hekáč|m}}
-* Spanish: {{t+|es|tombo|m}}, {{t+|es|paco|m}}, {{t+|es|madero|m}}
+* Spanish: {{t+|es|tombo|m}}, {{t+|es|paco|m}}, {{t+|es|madero|m}}, {{t+|es|pitufo|m}} {{qualifier|Spain, colloquial; of the municipal police}}, {{t+|es|picoleto|m}} {{qualifier|Spain, colloquial; of the Guardia Civil}}
 * Swedish: {{t+|sv|snut}}
 * Turkish: {{t+|tr|aynasız}}, {{t+|tr|dev}}
 * Ukrainian: {{t|uk|мент|m}}
