--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -21,13 +21,15 @@ From {{der|en|grc|μικρός||small}}, or shortened form for modern words form
 ===Noun===
 {{en-noun|~}}
 
+# {{lb|en|colloquial}} {{clipping of|en|microwave oven}}
+#: ''Just put it in the '''micro''' for 30 seconds and it's ready to eat.''
+# {{lb|en|colloquial|economics|uncountable}} {{clipping of|en|microeconomics}}
 # {{lb|en|computing|dated|countable}} {{form of|en|short form|microcomputer}}
 #* '''1984''', Mike Gerrard, Bryan Skinner, ''Mr Chips comes home: micros and home education'' (page 23)
 #*: If you can possibly afford to spend a few more pounds then you should move up into the next price bracket, where the potential of the home '''micro''' starts to be realised.
 #* '''1986''', Rachael Smith, ''Bomb Jack'' (video game review) in ''Your Sinclair'' issue 5, May 1986
+# {{lb|en|gaming|slang|uncountable}} [[micromanagement]]
 #*: So what sort of hero is this bounding, bomb collecting midget? The answer is an arcade hero - and now he's let loose in your '''micro''' courtesy of conversion kings, Elite.
-# {{lb|en|gaming slang|uncountable}} [[micromanagement]]
-# {{lb|en|colloquial|economics|uncountable}} {{clipping of|en|microeconomics}}
 
 ====Derived terms====
 * {{sense|microcomputer}} {{l|en|micromania}}
