--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -77,8 +77,8 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Hungarian: {{t+|hu|rohad}}, {{t+|hu|rothad}}
 * Italian: {{t+|it|marcire}}, {{t|it|putrefarsi}}
 * Japanese: {{t+|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
-{{trans-mid}}
 * Khmer: {{t+|km|រលួយ|tr=rɔluəy|sc=Khmr}}
+{{trans-mid}}
 * Korean: {{t+|ko|썩다}}, {{t+|ko|부패하다}}
 * Latgalian: {{t|ltg|pyut}}, {{t|ltg|trupēt}}
 * Latin: {{t|la|pūtrescō}}, {{t|la|putrefaciō}}, {{t|la|tābescō}}
@@ -113,6 +113,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Vietnamese: {{t+|vi|rữa}}, {{t+|vi|rã}}
 * Walloon: {{t+|wa|pouri}}
 * Welsh: {{t+|cy|pydru}}, {{t|cy|braenu}}, {{t+|cy|madru}}
+* Yiddish: {{t|yi|פֿױלן}}
 {{trans-bottom}}
 
 {{trans-top|''(transitive)'' to make putrid}}
