/* English */ wiki ➤ lite <marmot#62241068>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -1,5 +1,4 @@
 ==English==
-{{wikipedia}}
 [[Image:Hoary marmot.jpg|thumb|''Marmota caligata'']]
 
 ===Etymology===
@@ -124,12 +123,15 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Yakut: {{t|sah|таарбаҕан}}
 {{trans-bottom}}
 
-{{commons|Marmota}}
-
 ====See also====
 * {{l|en|groundhog}}
+
+====Further reading====
+* {{pedialite}}
+
 * {{l|en|woodchuck}}
 
+{{commons|Marmota}}
 [[Category:en:Squirrels]]
 
 ----
