t+cy:[[betio]] ([[WT:EDIT|Assisted]]) <bet#62260893>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -156,7 +156,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Turkish: {{t-needed|tr}}
 * Ukrainian: {{t|uk|би́тися об закла́д}}
 * Vietnamese: {{t+|vi|cá}}, {{t|vi|cược}}, {{t|vi|cá cược}}
-* Welsh: {{t-needed|cy}}
+* Welsh: {{t+|cy|betio}}
 {{trans-bottom}}
 
 {{trans-top|to be sure of something}}
