--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -311,8 +311,8 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Latin: {{t|la|curvāmen|n}}, {{t|la|flexus|m}}, {{t|la|campter|m}}
 * Lithuanian: {{t|lt|vingis|m}}
 * Maori: {{t|mi|hawe}} {{qualifier|in a track, road, or river}}, {{t|mi|hawhe}} {{qualifier|in a fenceline}}, {{t|mi|whawhe}} {{qualifier|in a fenceline}}, {{t|mi|noninga}} {{qualifier|in a river}}
-* Ngarrindjeri: {{t|nay|tagalang}}
 {{trans-mid}}
+* Ngarrindjeri: {{t|nay|tagalang}}
 * Norwegian:
 *: Bokmål: {{t+|nb|kurve|m}}
 *: Nynorsk: {{t|nn|kurve|f}}
@@ -324,6 +324,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Spanish: {{t+|es|curva|f}}, {{t+|es|recodo|m}}
 * Swedish: {{t+|sv|kurva|c}}, {{t+|sv|krök|c}}, {{t+|sv|böj}}
 * Westrobothnian: {{t|gmq-bot|böijel|m}}
+* Yiddish: {{t|yi|אױסבײג|m}}
 {{trans-bottom}}
 
 {{trans-top|knot}}
