t+pl:[[ciężarek]] t-balance ([[WT:EDIT|Assisted]]) <weight#62270060>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -218,9 +218,9 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Greek: {{t+|el|βάρος|n}}
 * Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
-{{trans-mid}}
 * Indonesian: {{t+|id|pemberat}}
 * Italian: {{t+|it|peso|m}}
+{{trans-mid}}
 * Japanese: {{t+|ja|重り|tr=omori}}
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
@@ -228,6 +228,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Norwegian: {{t+|no|vekt}}
 * Old English: {{t|ang|ġewiht|n}}
+* Polish: {{t+|pl|ciężarek|m}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
 * Russian: {{t+|ru|груз|m}}
