--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -257,6 +257,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Maori: {{t|mi|maihea}}
 * Old English: {{t|ang|ġewiht|n}}
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
+* Polish: {{t+|pl|ciężarek|m}}, {{t+|pl|odważnik|m}}
 * Portuguese: {{t+|pt|peso|m}}
 * Russian: {{t+|ru|ги́ря|f}}
 * Scots: {{t|sco|weicht}}
