--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -45,7 +45,7 @@ Compare {{cog|ms|malam}}.
 A clipping of {{m|ha|malami}}.
 
 ===Noun===
-{{ha-noun|m|mālàm|mā̀làmai}}
+{{ha-noun|m|mālàm|mā̀làmai|f=mālàmā}}
 
 # [[mister]]
 
