--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -120,7 +120,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Sicilian: {{t|scn|zaffu|m}}
 * Slovak: {{t+|sk|poliš|m}}, {{t|sk|hekáč|m}}
 * Spanish: {{t+|es|tombo|m}}, {{t+|es|paco|m}}, {{t+|es|madero|m}}, {{t+|es|pitufo|m}} {{qualifier|Spain, colloquial; of the municipal police}}, {{t+|es|picoleto|m}} {{qualifier|Spain, colloquial; of the Guardia Civil}}
-* Swedish: {{t+|sv|snut}}
+* Swedish: {{t+|sv|snut|c}}
 * Turkish: {{t+|tr|aynasız}}, {{t+|tr|dev}}
 * Ukrainian: {{t|uk|мент|m}}
 * Vietnamese: {{t+|vi|cớm}}
