--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -13,7 +13,7 @@ Derived from the stinging sensation of salt deliberately being rubbed into an op
 {{en-verb|*|head=[[rub]] [[salt in the wound]]}}
 
 # {{lb|en|idiomatic}} To make an injury, physical or emotional, feel worse.
-#: {{syn|en|add insult to injury|kick someone when they are down|twist the knife|rub it in}}
+#: {{syn|en|add insult to injury|kick someone when they are down|twist the knife|rub it in|Thesaurus:make matters worse}}
 
 ====Usage notes====
 * For {{m|en|rub}}, one can substitute verbs such as {{m|en|add}}, {{m|en|pour}}, {{m|en|put}}, possibly requiring a change in the preposition {{m|en|in}}.
