--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -25,6 +25,7 @@
 {{trans-mid}}
 * Irish: {{t|ga|mála airgid|m}}
 * Latin: {{t|la|pasceolus|m}}
+* Malayalam: {{t+|ml|പണക്കിഴി}}
 * Maori: {{t|mi|pēke moni }}
 * Polish: {{t+|pl|sakwa|f}}
 * Tagalog: {{t|tl|talega}}
