--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -401,7 +401,7 @@ From {{der|nn|la|domina}}, via {{bor|nn|fro|dame}} and late {{inh|nn|non|damma}}
 From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 
 ===Pronunciation===
-* {{IPA|fro|/ˈda.mə/}}
+* {{IPA|fro|[ˈdãmə]}}
 * {{rhymes|fro|amə}}
 
 ===Noun===
