added Romanian definition <macrobian#62282920>

--- a/en/m/macrobian.801847.wikitext
+++ b/en/m/macrobian.801847.wikitext
@@ -8,3 +8,18 @@
 
 ===Anagrams===
 * {{anagrams|en|a=aabcimnor|carbamino}}
+
+----
+
+==Romanian==
+
+===Etymology===
+From {{bor|ro|fr|macrobien}}
+
+===Adjective===
+{{ro-adj}}
+
+# [[macrobial]]
+
+====Declension====
+{{ro-decl-adj}}
