--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -64,7 +64,7 @@ From {{inh|nrf|fro|quatorze}}, from {{inh|nrf|la|quattuordecim}}.
 From {{inh|fro|la|quattuordecim}}.
 
 ===Pronunciation===
-* {{IPA|fro|/kwaˈtɔrd͡zə/}}
+* {{IPA|fro|/kaˈtɔrd͡zə/}}
 
 ===Numeral===
 {{enum|fro|treze|quinze|cardinal number|14}}
