t+pau:[[iungs]] ([[WT:EDIT|Assisted]]) <island#62286563>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -260,6 +260,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Oriya: {{t+|or|ଟାପୁ}}, {{t|or|ଦ୍ଵୀପ}}
 * Ossetian: {{t|os|сакъадах}}
 * Ottoman Turkish: {{t|ota|جزیره|tr=cezîre}}, {{t|ota|آدا|tr=ada}}, {{t|ota|جزائر|p|tr=cezâir}}
+* Palauan: {{t|pau|iungs}}
 * Pashto: {{t+|ps|ټاپو|m|tr=ṭâpú|sc=ps-Arab}}, {{t+|ps|جزيره|f|tr=ǰazirá}}
 * Persian: {{t+|fa|جزیره|tr=jazire}}, {{t+|fa|گنگ|tr=gang}}
 * Phoenician: {{t|phn|𐤀𐤉}}
