--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -21,8 +21,8 @@
 * German: {{t|de|2 Könige}}
 * Greek: {{t|el|Β' Βασιλειών}}, {{t|el|Βασιλείς Β'}}
 * Irish: {{t|ga|Dara Leabhar na Ríthe|m}}, {{t|ga|2 Ríthe|m}}
-* Japanese: {{t|ja|列王記下|tr=retsuō kige|sc=Jpan}}
-* Korean: {{t|ko|열왕기하|tr=yeolwanggi ha}}
+* Japanese: {{t|ja|列王記下|tr=Retsuō-kige|sc=Jpan}}
+* Korean: {{t|ko|열왕기하|tr=Yeorwanggi-ha}}
 * Spanish: {{t|es|2 Reyes|m-p}}
 * Thai: {{t|th|๒ พงศ์กษัตริย์}}
 {{trans-bottom}}
