--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -99,12 +99,12 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 * Afrikaans: {{t+|af|weer}}, {{t|af|alweer}}
 * Albanian: {{t+|sq|përsëri}}
 * Arabic: {{t|ar|مَرَّة أُخْرَى|f|tr=marra ʾuḵrā}}, {{t|ar|كَرَّة أُخْرَى|f|tr=karra ʾuḵrā}} {{qualifier|adverbial accusative used}}, {{t+|ar|ثَانِيَةً}}
-*: Egyptian Arabic: {{t|arz|تاني|tr=tāni}}, {{t|arz|كمان|tr=kamān ~ kmān}}
+*: Egyptian Arabic: {{t|arz|تاني|tr=tāni}}, {{t|arz|كمان|tr=kamān, kmān}}
 *: Gulf Arabic: {{t|afb|مرة ثانية|f|tr=marra ṯānya}}
 *: Hijazi Arabic: {{t|acw|مَرَّة ثانْية|f|tr=marra tānya}}
-*: Moroccan Arabic: {{t|ary|عاود تاني|tr=ʕāwd tāni}}
+*: Moroccan Arabic: {{t|ary|عاود تاني|tr=ʿāwd tāni}}
 * Aragonese: {{t-needed|an}}
-* Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t+|hy|նորից}}, {{qualifier|Western-Armenian}} {{t+|hy|նորեն}}
+* Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern}} {{t+|hy|նորից}}, {{qualifier|Western}} {{t+|hy|նորեն}}
 * Assamese: {{t|as|আকৌ}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
