--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -93,7 +93,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 *: Bokmål: {{t+|nb|fløyte|m|f}}
 *: Nynorsk: {{t|nn|fløyte|f}}
 * Persian: {{t+|fa|سوت}}
-* Polish: {{t+|pl|gwizdek|m}}
+* Polish: {{t+|pl|gwizdek|m}}, {{t+|pl|piszczałka|f}}
 * Portuguese: {{t+|pt|apito|m}}
 * Romanian: {{t+|ro|fluier|n}}
 * Russian: {{t+|ru|свисто́к|m}}
