--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 From {{der|en|ang|Ēostre|}}, {{m|ang|Ēastre||a word referring to "the rising dawn" to indicate the season of Spring}} and {{m|ang|ēastre||Easter}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime}}. {{doublet|en|Easter}}.
 
+===Pronunciation===
+* {{ang-IPA|Eostre}}
+
 ===Proper noun===
 {{en-proper noun}}
 {{wikipedia}}
