--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -256,7 +256,8 @@ From {{der|nn|la|minimum}}
 From {{bor|pl|la|minimum}}.
 
 ===Pronunciation===
-* {{pl-IPA|'mi.ni.mum}}
+* {{pl-IPA|/'mi.ni.mum/}}
+* {{audio|pl|LL-Q809 (pol)-Olaf-minimum.wav|Audio}}
 
 ===Adverb===
 {{pl-adv|-}}
