--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -192,6 +192,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | juru bahasa
 | pakar bahasa
 | tata bahasa
+| warna bahasa
 |}}
 
 ====Descendants====
