--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -7,7 +7,7 @@
 {{stroke order|type=animate}}
 
 ===Han character===
-{{Han char|rn=74|rad=月|as=00|sn=4|four=77220|canj=B|ids=⿵冂𠄠}}
+{{Han char|rn=74|rad=月|as=00|sn=4|four=77220|canj=B|ids=⿵⺆𠄠}}
 
 # {{mul-kangxi radical-def}}
 
