--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -17,6 +17,7 @@ From {{bor|en|la|quā||in the capacity of}}.
 {{en-prep}}
 
 # [[as]]; in the [[capacity]] of
+#* {{quote-book|en|year=1920|title=The Sacred Wood|author=T. S. Eliot|authorlink=T. S. Eliot|chapter=[[s:en:The Sacred Wood/Hamlet and His Problems|Hamlet and His Problems]]|passage='''''Qua''''' work of art, the work of art cannot be interpreted; there is nothing to interpret; we can only criticize it according to standards, in comparison to other works of art; {{...|and for 'interpretation' the chief task is the presentation of relevant historical facts which the reader is not assumed to know.}}}}
 #* '''1954''': [[w:Gilbert Ryle|Gilbert Ryle]], ''Dilemmas: The Tarner Lectures, 1953'', <span style="font-variant:small-caps">dilemma vii: Perception</span>, page 99 (The Syndics of the Cambridge University Press)
 #*: As anatomy, physiology and, later, psychology have developed into more or less well-organized sciences, they have necessarily and rightly come to incorporate the study of, among other things, the structures, mechanisms, and functionings of animal and human bodies '''''qua''''' percipient.
 #* '''1962''': [[w:Norman Malcolm|Norman Malcolm]]; ''Dreaming''; chapter nine: “Judgments in Sleep”, page 39<sup>{1}</sup>; chapter twelve: “The Concept of Dreaming”, page 68<sup>{2}</sup> (1977 paperback reprint; Routledge & Kegan Paul; ISBN 0‒7100‒3836‒4 (c), 0‒7100‒8434‒X (p))
