--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -68,6 +68,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |[[mill race]], [[millrace]]
 |Mills Hill
 |millstone
+|Milltown
 |[[mill wheel]], [[millwheel]]
 |more sacks to the mill
 |Newmill
