--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -279,7 +279,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Nyunga: {{tt|nys|beerk}}
 * Occitan: {{tt+|oc|pòrc|m}}, {{tt|oc|puèrc|m}}
 * Ojibwe: {{tt|oj|gookoosh}}
-* Okinawan: {{tt|ryu|うゎー|tr=wā}}
+* Okinawan: {{tt|ryu|っわー|tr='wā}}
 * Old Church Slavonic:
 *: Cyrillic: {{tt|cu|свиниꙗ|f}}
 * Old East Slavic: {{t|orv|свиньꙗ|f}}
