--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -3,10 +3,14 @@
 {{cardinalbox|co|8|9|10|ottu|dece}}
 
 ===Alternative forms===
-* {{l|co|novi}}
+* {{alter|co|novi}}
 
 ===Etymology===
-From {{inh|co|la|novem}}, from {{inh|co|ine-pro|*h₁néwn̥}}. Cognates include {{cog|it|nove}} and {{cog|pt|nove}}.
+From {{inh|co|la|novem}}, from {{inh|co|itc-pro|*nowem}}, from {{inh|co|ine-pro|*h₁néwn̥}}. Cognates include {{cog|it|nove}} and {{cog|pt|nove}}.
+
+===Pronunciation===
+* {{IPA|co|/ˈnɔve/}}
+* {{hyph|co|no|ve}}
 
 ===Numeral===
 {{head|co|numeral|cat2=cardinal numbers}}
