/* Etymology 5 */ "originally" is a use, not a mention, so should be outside quotes <bound#62332390>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -257,7 +257,7 @@ From {{inh|en|enm|bounden}}, from the noun (see above).
 {{trans-bottom}}
 
 ===Etymology 5===
-From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|bondir|t=to leap, bound, originally make a loud resounding noise}}; perhaps from {{der|en|LL.|bombitāre}}, present active infinitive of {{m|la|bombitō||hum, buzz}}, frequentative verb, from {{der|en|la|bombus|t=a humming or buzzing}}.
+From {{inh|en|enm|*bounden}} (attested as {{m|enm|bounten}}), from {{der|en|fr|bondir|t=leap", "bound", originally "make a loud resounding noise}}; perhaps from {{der|en|LL.|bombitāre}}, present active infinitive of {{m|la|bombitō||hum, buzz}}, frequentative verb, from {{der|en|la|bombus|t=a humming or buzzing}}.
 
 ====Noun====
 {{en-noun}}
