/* Related terms */ <multiplication#62357439>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -187,6 +187,7 @@ Borrowed from {{bor|fr|la|multiplicatio|multiplicatio, multiplicationem}}.
 |multiplicatif
 |multiplicité
 |multiplier
+|table de multiplication
 }}
 
 ===Further reading===
