--- a/en/k/kerel.4473.wikitext
+++ b/en/k/kerel.4473.wikitext
@@ -44,8 +44,9 @@ From {{inh|nl|dum|kerle}}. {{etystub|nl}}
 
 ===Etymology===
 {{root|rom|ine-pro|*kʷer-}}
+{{dercat|rom|inc-pro|ine-pro|iir-pro|inh=3}}
 {{root|rom|sa|कृ}}
-From {{inh|rom|psu|𑀓𑀭𑁂𑀤𑀺}}, from {{inh|rom|sa|करोति|tr=karóti}}. Cognate with {{cog|hi|करना}}, {{cog|pa|ਕਰਨਾ}}, {{cog|ne|गर्नु}}, {{cog|gu|કરવું}}, {{cog|mr|करणे}}, and {{cog|bn|করা}}.
+From {{inh|rom|psu|𑀓𑀭𑁂𑀤𑀺}}, from {{inh|rom|sa|करोति|tr=karóti}}, a corruption from {{inh|tr=kṛṇóti|rom|sa-ved|कृणोति}}. Cognate with {{cog|hi|करना}}, {{cog|pa|ਕਰਨਾ}}, {{cog|ne|गर्नु}}, {{cog|gu|કરવું}}, {{cog|mr|करणे}}, and {{cog|bn|করা}}.
 
 ===Pronunciation===
 * {{IPA|rom|/ˈke.rel/|/ˈkə.rel/}}
