--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -295,7 +295,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}, {{t+|sv|tyngd|c}}
-* Turkish: {{t+|tr|ağırlık}}
+* Turkish: {{t+|tr|ağırlık}}, {{t+|tr|halter}}
 {{trans-bottom}}
 
 {{trans-see|physics: mass|mass}}
