--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -9,7 +9,7 @@
 
 ===Etymology 1===
 {{root|en|ine-pro|*gʷʰedʰ-}}
-From {{der|en|enm|bidden}}, from the {{der|en|ang|-}} verb {{m|ang|biddan||ask, demand}}, from {{der|en|gem-pro|*bidjaną||to ask}}, from {{der|en|ine-pro|*gʷʰedʰ-}}. Conflated with the {{der|en|ang|-}} verb {{m|ang|bēodan||offer, announce}} (see Etymology 2 below). Compare {{cog|fy|bidde}}, {{cog|nds|bidden}}, {{cog|nl|bidden}} ("to pray"), {{cog|de|bitten}}, {{cog|da|bede}}, {{cog|nb|be}}.
+From {{der|en|enm|bidden}}, from {{der|en|ang|-}} {{m|ang|biddan||to ask, demand}}, from {{der|en|gem-pro|*bidjaną||to ask}}, from {{der|en|ine-pro|*gʷʰedʰ-}}. Conflated with the {{der|en|ang|-}} verb {{m|ang|bēodan||offer, announce}} (see Etymology 2 below). Compare {{cog|fy|bidde}}, {{cog|nds|bidden}}, {{cog|nl|bidden}} ("to pray"), {{cog|de|bitten}}, {{cog|da|bede}}, {{cog|nb|be}}.
 
 ====Verb====
 {{en-verb|bids|bidding|bid|past2=bade|past3=bad|past_ptc2=bidden}}
