/* Derived terms */ [[quacker]] <quack#62373752>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -133,6 +133,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 
 =====Derived terms=====
 {{col3|en
+|quacker
 |quackery
 |quackhood
 |quacky
