--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -72,9 +72,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 {{en-noun}}
 
 # {{lb|en|slang|law enforcement}} A [[police officer]] or [[prison guard]].
-
-=====Synonyms=====
-* See also [[Thesaurus:police officer]]
+#: {{syn|en|Thesaurus:police officer}}
 
 =====Derived terms=====
 {{col4|en
