--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -13,7 +13,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 
 The fact that the use of the word pig as an insult existed since the reign of Henry is not new as it has been long since recorded but the use of pig in slang for the police is equally questionable and could be explained in many ways. 
 
-The first police force was introduced as the metropolitan police force in 1829 by Sir Robert Peel. Sir Robert peel also imported pigs from Ireland which where used in the brush making industries in Tamworth. Home to the the MPs constituency. These are now know as the Tamworth pigs which have coarse bristles making them perfect for creating brushes. During this time the police force consisted of many Irish migrants due to the lack of local residents occupying the police posts. (For the main reason of not wishing to be targeted by locals but also so that locals could not be bribed.) It is due to this fact that Peel imported both migrant workers and pigs that reinforced the connection between the animal and the police officers.
+The first police force was introduced as the metropolitan police force in 1829 by Sir Robert Peel. Sir Robert peel also imported pigs from Ireland which were used in the brush making industries in Tamworth. Home to the the MPs constituency. These are now know as the Tamworth pigs which have coarse bristles making them perfect for creating brushes. During this time the police force consisted of many Irish migrants due to the lack of local residents occupying the police posts. (For the main reason of not wishing to be targeted by locals but also so that locals could not be bribed.) It is due to this fact that Peel imported both migrant workers and pigs that reinforced the connection between the animal and the police officers.
 ====Pronunciation====
 * {{IPA|en|/ˈpɪɡ/}}
 * {{audio|en|en-us-pig.ogg|Audio (US)}}
