--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -6,7 +6,7 @@
 * {{l|en|musk-rat}}
 
 ===Etymology===
-Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|rat}}, or perhaps called by an {{etyl|alg|en}} name like the {{cog|abe|moskwas}}, with the spelling altered under the influence of the {{etyl|en|-}} words {{m|en|musk}} and {{m|en|rat}}.
+Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|rat}}, or perhaps called by an {{der|en|alg|-}} name like the {{cog|abe|moskwas}}, with the spelling altered under the influence of the {{cog|en|-}} words {{m|en|musk}} and {{m|en|rat}}.
 
 ===Pronunciation===
 * {{IPA|en|/ˈmʌskɹæt/}}
