--- a/en/d/diageneses.776700.wikitext
+++ b/en/d/diageneses.776700.wikitext
@@ -5,6 +5,4 @@
 ===Noun===
 {{head|en|noun form}}
 
-# {{plural of|en|diagenesis}}
-
-[[Category:English irregular plurals ending in "-es"]]
+# {{en-irregular plural of|ending=es|diagenesis}}
