--- a/en/s/synæreses.742367.wikitext
+++ b/en/s/synæreses.742367.wikitext
@@ -4,6 +4,4 @@
 ===Noun===
 {{head|en|noun form}}
 
-# {{plural of|en|synæresis}}
-
-[[Category:English irregular plurals ending in "-es"]]
+# {{en-irregular plural of|ending=es|synæresis}}
