--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -1,6 +1,6 @@
 {{also|Marten|Mårten}}
 ==English==
-{{wikipedia}}
+{{wiki}}
 {{wikispecies|Martes}}
 
 ===Pronunciation===
@@ -9,7 +9,7 @@
 * {{audio|en|En-us-marten.ogg|Audio (US)}}
 * {{hyphenation|en|mar|ten}}
 * {{rhymes|en|ɑː(ɹ)tɪn}}
-* {{homophones|en|martin|Martin}} {{qualifier|in some accents}}
+* {{homophones|en|martin|Martin}} {{q|in some accents}}
 
 ===Etymology 1===
 From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||marten fur}}, from {{der|en|odt|*marthrīn||of marten fur}}, from {{m|odt|*marthar||marten}}. Displaced {{noncog|ang|mearþ}}, from {{noncog|gem-pro|*marþuz}}.
@@ -42,7 +42,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 * Erzya: {{t|myv|чинеме}}
 * Esperanto: {{t|eo|marteso}}
 * Estonian: {{t|et|nugis}}
-* Faroese: {{t|fo|márur}}, {{t|fo|mørður|m}}
+* Faroese: {{t|fo|márur|m}}, {{t|fo|mørður|m}}
 * Finnish: {{t+|fi|näätä}}
 * French: {{t+|fr|marte|f}}
 * Friulian: {{t|fur|mardar}}, {{t|fur|martar}}
@@ -52,16 +52,16 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 * Greek: {{t|el|δενδροκούναβο}}
 *: Ancient: {{t|grc|ἴκτις|f}}
 * Hungarian: {{t+|hu|nyuszt}}, {{t+|hu|nyest}}
-* Icelandic: {{t+|is|mörður}}
+* Icelandic: {{t+|is|mörður|m}}
 * Inari Sami: {{t|smn|neeti}}
-* Irish: {{t+|ga|cat crainn}}
+* Irish: {{t+|ga|cat crainn|m}}
 * Italian: {{t+|it|martora|f}}
 * Japanese: {{t+|ja|テン|tr=ten|sc=Jpan}}
 * Kazakh: {{t|kk|сусар}}
 * Kildin Sami: {{t|sjd|не̄дтҍ}}
 * Korean: {{t+|ko|담비}}
 * Ladin: {{t|lld|meder}}
-* Latin: {{t|la|martes|f}}
+* Latin: {{t|la|martēs|f}}
 * Latvian: {{t|lv|cauna|f}}
 * Lithuanian: {{t+|lt|kiaunė|f}}
 * Lule Sami: {{t|smj|niehte}}
@@ -71,18 +71,20 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 * Mi'kmaq: {{t|mic|apistanewj|an}}
 * Mongolian: {{t+|mn|суусар}}
 * Narragansett: {{t|xnt|wappenagh}}
-* Norman: {{t|nrf|martre|f}} {{qualifier|Jersey}}
+* Norman: {{t|nrf|martre|f}} {{q|Jersey}}
 * Northern Sami: {{t|se|neahti}}
-* Norwegian: {{t|no|mår}}
-* Occitan: {{t+|oc|marta}}
+* Norwegian: 
+*: Bokmål: {{t|nb|mår|m}}
+*: Nynorsk: {{t|nb|mår|m}}
+* Occitan: {{t+|oc|marta|f}}
 * Ojibwe: {{t|oj|waabizheshi}}, {{t|oj|waabizheshiwag|p}}
 * Old English: {{t|ang|mearþ|m}}
 * Persian: {{t+|fa|سمور|tr=samur}}, {{t+|fa|خز|tr=xaz}}
 * Pite Sami: {{t|sje|marrta}}
 * Polish: {{t+|pl|kuna|f}}
-* Portuguese: {{t+|pt|marta}}
-* Romanian: {{t+|ro|jder}}
-* Romansch: {{t|rom|fiergna}}
+* Portuguese: {{t+|pt|marta|f}}
+* Romanian: {{t+|ro|jder|m}}
+* Romansch: {{t|rom|fiergna|f}}, {{t|rom|guis|m}}
 * Russian: {{t+|ru|куни́ца|f}}
 * Sardinian: {{t|sc|schirri}}, {{t|sc|isbirru}}, {{t|sc|marta}}, {{t|sc|martzu}}
 * Scottish Gaelic: {{t|gd|taghan}}
@@ -98,7 +100,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 * Southern Altai: {{t|alt|суузар}}
 * Southern Sami: {{t|sma|maarhte}}
 * Spanish: {{t|es|marta|f}}
-* Swedish: {{t+|sv|mård}}
+* Swedish: {{t+|sv|mård|c}}
 * Ter Sami: {{t|sjt|niette}}
 * Turkish: {{t+|tr|sansar}}
 * Ukrainian: {{t|uk|куни́ця|f}}
@@ -109,16 +111,19 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 {{trans-bottom}}
 
 ====See also====
-* {{l|en|badger}}
-* {{l|en|ermine}}
-* {{l|en|ferret}}
-* {{l|en|fisher}}
-* {{l|en|mink}}
-* {{l|en|otter}}
-* {{l|en|sable}}
-* {{l|en|stoat}}
-* {{l|en|weasel}}
-* {{l|en|wolverine}}
+{{col4|en
+|badger
+|ermine
+|ferret
+|fisher
+|mink
+|mustelid
+|otter
+|sable
+|stoat
+|weasel
+|wolverine
+}}
 
 ===Etymology 2===
 
@@ -129,7 +134,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 #* '''1829''', ''Magazine of Natural History'' (volume 1, page 402)
 #*: Towards the end of the month, swallows and house '''martens''' congregate, and are often seen resting on the ridges or sloping roofs of buildings.
 
-===Anagrams===
+====Anagrams====
 * {{anagrams|en|a=aemnrt|Arment|rament}}
 
 [[Category:en:Mustelids]]
