added Romanian definition <minimum#62403705>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -283,6 +283,21 @@ From {{bor|pl|la|minimum}}.
 
 ----
 
+==Romanian==
+
+===Etymology===
+From {{bor|ro|la|minimum}}
+
+===Noun===
+{{ro-noun|n|-}}
+
+# {{l|en|minimum}}
+
+====Declension====
+{{ro-noun-n|n=sg}}
+
+----
+
 ==Serbo-Croatian==
 
 ===Pronunciation===
