/* Related terms */ <nove#62405889>

--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -102,8 +102,8 @@ From {{inh|it|la|novem}}, ultimately from {{inh|it|ine-pro|*h₁néwn̥}}.
 # [[nine]]
 
 =====Related terms=====
-{{rel3
-|it|novanta
+{{col4|it
+|novanta
 |novecentesco
 |[[novecento]], [[Novecento]]
 |novembre
