Replacing with plain links (semi-automated) <badger#62406214>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -170,7 +170,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * {{l|en|cete}}
 * {{l|en|meline}}
 * {{l|en|sett}}, {{l|en|set}}
-* {{l|en|Appendix: Animals}}
+* [[Appendix: Animals]]
 
 ====References====
 * {{pedia}}
