--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -151,7 +151,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Irish: {{t+|ga|coinín|m}}
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: {{t+|ja|兎|tr=うさぎ, usagi|sc=Jpan}}, {{t+|ja|ウサギ|tr=usagi|sc=Jpan}}
-* Kala Lagaw Ya: {{t-needed|mwp}}}
+* Kala Lagaw Ya: {{t-needed|mwp}}
 * Kannada: {{t+|kn|ಮೊಲ|sc=Knda}}
 * Kashubian: {{t|csb|trus}}
 * Kazakh: {{t|kk|ор қоян|sc=Cyrl}}, {{t|kk|үй қояны|sc=Cyrl}}, {{t+|kk|қоян|sc=Cyrl}}
