--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -215,17 +215,7 @@ The {{m|ja|慣用音|tr=kan'yōon}} reading, a pronunciation in common usage bas
 # month
 
 =====Derived terms=====
-{{der-top3}}
-{{ja-r/multi|data=
-* {{ja-r/args|月%宮%殿|^がっ%くう%でん}}
-* {{ja-r/args|月%宮|がっ%くう}}
-* {{ja-r/args|月%山|^がっ%さん}}
-* {{ja-r/args|月%帯%食|がっ%たい%しょく}}
-* {{ja-r/args|月%天|がっ%てん}}
-* {{ja-r/args|月%天%子|^がっ%てん%し}}
-* {{ja-r/args|月%日|がっ%ぴ}}
-}}
-{{der-bottom}}
+* {{see derivation subpage|Japanese}}
 
 =====Usage notes=====
 When used in most compounds or when counting a number of months with {{m|ja|ヶ|tr=ka}}, {{lang|ja|月}} is pronounced {{m|ja|げつ|tr=getsu}}. When used in compounds for modern months of the year, it is pronounced {{m|ja|がつ|tr=gatsu}}. When used for poetic or lunar months, it is pronounced {{m|ja|つき|tr=tsuki}}.
