--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -395,20 +395,7 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 }}
 
 ====Compounds====
-{{der-top4|Compounds}}
-* {{l|ryu|月食|tr=gwatsuku}}
-* {{l|ryu|一月|tr=ichigwachi}}
-* {{l|ryu|二月|tr=nigwachi}}
-* {{l|ryu|三月|tr=sangwachi}}
-* {{l|ryu|四月|tr=shigwachi}}
-* {{l|ryu|五月|tr=gugwachi}}
-* {{l|ryu|六月|tr=rukugwachi}}
-* {{l|ryu|七月|tr=shichigwachi}}
-* {{l|ryu|八月|tr=hachigwachi}}
-* {{l|ryu|九月|tr=kugwachi}}
-* {{l|ryu|十月|tr=zūgwachi}}
-* {{l|ryu|正月|tr=sōgwachi}}
-{{der-bottom}}
+* {{see derivation subpage|Okinawan}}
 
 ===Alternative forms===
 * {{q|topicalized}} {{alter|ryu|月ぇ|tr=chichē}}
@@ -430,19 +417,7 @@ Cognate with {{cog|ja|月|tr=tsuki}}.
 # a month
 
 =====Derived terms=====
-{{der-top4}}
-* {{l|ryu|月影|tr=chichikaji}}
-* {{l|ryu|月ぬ物|tr=chichi nu mun}}
-* {{l|ryu|月夜|tr=chichū}}
-* {{l|ryu|月日|tr=chichifi}}
-* {{l|ryu|月見|tr=chichimi}}
-* {{l|ryu|一月|tr=chuchichi}}
-* {{l|ryu|朧月|tr=uburujichi}}
-* {{l|ryu|霜月|tr=shimuchichi}}
-* {{l|ryu|三日月|tr=mikajichi}}
-* {{l|ryu|毎月|tr=mējichi}}
-* {{l|ryu|閏月|tr=yunjichi}}
-{{der-bottom}}
+* {{see derivation subpage|Okinawan}}
 
 ===Etymology 2===
 {{ryu-kanjitab|ぐゎち|yomi=o}}
