--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -70,7 +70,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * French: {{t+|fr|pourrir}}
 * Galician: {{t+|gl|podrecer}}
 * Georgian: {{t|ka|ლპობა}}, {{t|ka|დალპობა}}, {{t|ka|ჩალპობა}}, {{t|ka|ხრწნა}}
-* German: {{t+|de|verrotten}}, {{t+|de|verderben}}, {{t+|de|faulen}}, {{t+|de|verfaulen}}
+* German: {{t+|de|verrotten}}, {{t+|de|verderben}}, {{t+|de|faulen}}, {{t+|de|verfaulen}}, {{t+|de|verwesen}}, {{t|de|putreszieren}}, {{t|de|sich zersetzen}}, {{t|de|in Fäulnis übergehen}}
 * Greek: {{t+|el|σαπίζω}}
 *: Ancient: {{t|grc|[[σήπω|σήπομαι]]}}
 * Hebrew: {{t|he|נרקב|m|tr=nirkáv}}
