--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -58,7 +58,7 @@
 * Galician: {{t|gl|lígur|m}}
 {{trans-mid}}
 * Italian: {{t+|it|ligure|m}}
-* Ligurian: {{t-needed|lij}}
+* Ligurian: {{t|lij|léngoa lígure}}
 * Portuguese: {{t|pt|lígure|m}}, {{t|pt|ligúrio|m}}
 * Spanish: {{t+|es|ligur}}
 * Swedish: {{t+|sv|liguriska|c}}
