--- a/en/i/ios.746896.wikitext
+++ b/en/i/ios.746896.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{head|en|noun form}}
 
-# {{plural of|en|io}}
+# {{plural of|en|iOS}}
 
 ===Anagrams===
 * {{anagrams|en|a=ios|ISO|OIs|OSI|SOI|iso|iso-|soi}}
