--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -30,20 +30,20 @@ Abbreviation of various terms and phrases.
 ===Noun===
 {{en-noun|~}}
 
-# [[compact disc|Compact disc]]; a disc once commonly used to store data, and especially for the distribution of [[music]] and [[software]].
+# {{initialism of|en|compact disc|nodot=1}}; a disc once commonly used to store data, and especially for the distribution of [[music]] and [[software]].
 #: {{ux|en|I misplaced the Windows 98 install '''CD'''.}}
 #* {{quote-journal|en|author=Allan Kozinn|title=The Future is Digital|work=The New York Times|date=1980-04-13|url=https://www.nytimes.com/1980/04/13/archives/the-future-is-digital.html|issn=0362-4331|passage=Called Compact Discs ('''CD''' for short) and expected to enter the market by 1983, they play an hour per side and are virtually indestructible.}}
 ## {{lb|en|metonymically|dated}} An [[album]]; a collection of musical recordings (or, occasionally, other audio such as [[spoken word]]).
 ##: {{ux|en|Mariah Carey's new '''CD''' has some R'n'B influences.}}
-# {{lb|en|now|rare}} The [[corps diplomatique]], or [[diplomatic corps]] of a particular country.
+# {{lb|en|now|rare}} {{initialism of|en|corps diplomatique|nodot=1}}, the [[diplomatic corps]] of a particular country.
 #* '''1955''', {{w|Graham Greene}}, ''The Quiet American'':
 #*: Along the route to Tanyin flowed a fast stream of staff and '''C.D.''' cars.
 #* '''1978''', {{w|Kingsley Amis}}, ''Jake's Thing'', Vintage 2007, p. 8:
 #*: Jake lengthened his stride and crossed the road in front of a double-parked car, large, black and with '''CD''' plates.
-# [[certificate of deposit|Certificate of deposit]] {{qualifier|from a financial institution}}.
-# [[creative director|Creative director]]: head of the creative department (for example of an advertising agency).
-# [[corporate design|Corporate design]]: specific design features of a company, corporate identity [[CI]]. {{rfc-sense|en}}
-# [[collision detection|Collision detection]] {{qualifier|used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen}}.
+# {{lb|en|finance}} {{abbreviation of|en|certificate of deposit}}
+# {{lb|en|business}} {{initialism of|en|creative director|nodot=1}}, head of the creative department (for example of an advertising agency).
+# {{lb|en|business}} {{initialism of|en|corporate design|nodot=1}}, specific design features of a company, corporate identity [[CI]]. {{rfc-sense|en}}
+# {{lb|en|networking}} {{initialism of|en|collision detection|nodot=1}}, used by an [[Ethernet]] network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen.
 # {{initialism of|en|chart datum}}
 # {{initialism of|en|cross-dresser}}
 # {{lb|en|chemistry|physics}} {{initialism of|en|circular dichroism}}
