--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -35,7 +35,7 @@ Abbreviation of various terms and phrases.
 #* {{quote-journal|en|author=Allan Kozinn|title=The Future is Digital|work=The New York Times|date=1980-04-13|url=https://www.nytimes.com/1980/04/13/archives/the-future-is-digital.html|issn=0362-4331|passage=Called Compact Discs ('''CD''' for short) and expected to enter the market by 1983, they play an hour per side and are virtually indestructible.}}
 ## {{lb|en|metonymically|dated}} An [[album]]; a collection of musical recordings (or, occasionally, other audio such as [[spoken word]]).
 ##: {{ux|en|Mariah Carey's new '''CD''' has some R'n'B influences.}}
-# {{lb|en|now|rare}} {{initialism of|en|corps diplomatique|nodot=1}}, the [[diplomatic corps]] of a particular country.
+# {{lb|en|diplomacy|now|rare}} {{initialism of|en|corps diplomatique|nodot=1}}, the [[diplomatic corps]] of a particular country.
 #* '''1955''', {{w|Graham Greene}}, ''The Quiet American'':
 #*: Along the route to Tanyin flowed a fast stream of staff and '''C.D.''' cars.
 #* '''1978''', {{w|Kingsley Amis}}, ''Jake's Thing'', Vintage 2007, p. 8:
