--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -45,7 +45,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 # {{lb|en|UK|intransitive}} To submit for consideration to a deliberative body.
 # {{lb|en|law}} (with ''[[of]]'') To cause (an action or matter) to be or remain before (a certain judge or court).
 #: ''This Court will remain '''seized''' of this matter.''
-#: {{lb|en|culinary}} To have [[chocolate]] or [[sugar]] clump together while melting.
+# {{lb|en|culinary}} To have [[chocolate]] or [[sugar]] clump together while melting.
 
 ====Derived terms====
 {{der3
