--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -73,6 +73,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |more sacks to the mill
 |Newmill
 |New Mills
+|no mill, no meal
 |ordenation mill
 |paper mill
 |pecker mill
