/* Translations */ +Russian translation <quack#62431287>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -47,7 +47,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Polish: {{t|pl|kwaknięcie|n}}, {{t+|pl|kwak|m}}, {{t+|pl|kwa}}
 * Portuguese: {{t|pt|quac|m}}, {{t|pt|quá|m}}
 * Romanian: {{t+|ro|mac|?}}, {{t|ro|mac-mac|?}}, {{t+|ro|măcăit|n}}, {{t+|ro|măcănit|n}}, {{t+|ro|măcăitură|f}}
-* Russian: {{t|ru|кря-кря|?}}, {{t+|ru|кря́канье|n}}
+* Russian: {{t+|ru|кря}} {{q|imitative}}, {{t|ru|кря-кря́}} {{q|imitative}}, {{t+|ru|кря́канье|n}} {{q|descriptive}}
 * Spanish: {{t+|es|cuac|m}}, {{t+|es|cua|m}}
 * Swedish: {{t+|sv|kvack|n}}
 * Tagalog: {{t|tl|kwak-kwak}}
