/* Etymology */ <money-grubbing#62439713>

--- a/en/m/money-grubbing.720246.wikitext
+++ b/en/m/money-grubbing.720246.wikitext
@@ -5,7 +5,7 @@
 * {{alter|en|moneygrubbing}}
 
 ===Etymology===
-From {{l|en|money}} and {{l|en|grub||to search for by digging in the soil}}.
+From {{l|en|money}} and {{l|en|grub||to search for by digging in soil or dirt}}.
 
 ===Adjective===
 {{en-adj|head=[[money]]-[[grubbing]]}}
