t+fr:[[quadrivecteur]] ([[WT:EDIT|Assisted]]) <four-vector#62447468>

--- a/en/f/four-vector.855376.wikitext
+++ b/en/f/four-vector.855376.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|vector in four-dimensional vector space}}
+* French: {{t|fr|quadrivecteur|m}}
 * Italian: {{t+|it|quadrivettore|m}}
 {{trans-mid}}
 {{trans-bottom}}
