--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -195,6 +195,7 @@ From {{inh|ca|roa-oca|colp}}, from {{der|ca|LL.|colpus||stroke}}, from earlier {
 * {{l|ca|cop baix}}
 * {{l|ca|cop d'estat}}
 * {{l|ca|cop d'ull}}
+* {{l|ca|de cop}}
 * {{l|ca|un cop}}
 
 ===Further reading===
